<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".view.ui.activity.MainActivity">


    <View
        android:id="@+id/container_top"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/app_bar_style"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_logout"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/container_top"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:src="@drawable/ic_logout"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/txt_title"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_title_app" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_price_gasoline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/orange"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txt_price_alcohol"
        app:layout_constraintTop_toBottomOf="@id/img_avatar">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_price_gasoline"
        android:background="@drawable/background_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/txt_price_gasoline"
            android:maxLength="5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/txt_alcohol"
            app:layout_constraintTop_toBottomOf="@id/img_avatar" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_price_alcohol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/orange"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/txt_price_gasoline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_price_gasoline">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_price_alcohol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@drawable/background_edit_text"
            android:hint="@string/txt_alcohol"
            app:layout_constraintLeft_toRightOf="@+id/txt_price_gasoline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_price_gasoline" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calc_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:background="@drawable/calc_button"
        android:text="@string/txt_calc"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_result_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/txt_result"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_calc_price" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/clear_button"
        android:drawableEnd="@drawable/ic_clear"
        android:text="@string/btn_clear"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_result_price" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:background="@drawable/save_button"
        android:drawableEnd="@drawable/save"
        android:text="@string/btn_save"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/btn_finish"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_clear" />

    <!--        style="@style/button_style"-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:background="@drawable/finish_button"
        android:drawableEnd="@drawable/ic_exit"
        android:text="@string/btn_finish"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_save" />


</androidx.constraintlayout.widget.ConstraintLayout>
