<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".RegisterActivity">


<!--    Container Top-->
    <View
        android:id="@+id/container_top"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/app_bar_style"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    Logo-->
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="@id/container_top"
        app:layout_constraintLeft_toLeftOf="@id/container_top"
        app:layout_constraintRight_toRightOf="@id/container_top"
        app:layout_constraintTop_toTopOf="@id/container_top"
        app:srcCompat="@drawable/logo" />
<!--EditText Name-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutName"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/orange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_top"

        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:hint="@string/hint_name"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="15dp"
            android:textSize="18sp" />


    </com.google.android.material.textfield.TextInputLayout>
<!--    EditText Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutEmail"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/orange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayoutName"

        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="15dp"
            android:textSize="18sp" />


    </com.google.android.material.textfield.TextInputLayout>

<!--EditText Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutPassword"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:boxBackgroundColor="@color/white"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/orange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayoutEmail"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/orange">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="15dp"
            android:textSize="18sp"

            />


    </com.google.android.material.textfield.TextInputLayout>
<!--EditText Repeat Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutPasswordRepeat"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:boxBackgroundColor="@color/white"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/orange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayoutPassword"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/orange">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:hint="@string/hint_password_repeat"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="15dp"
            android:textSize="18sp"

            />


    </com.google.android.material.textfield.TextInputLayout>
<!--Button Create Account-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_btn_sign_in"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/txt_create_account"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayoutPasswordRepeat" />
<!--Container Bottom-->
    <View
        android:id="@+id/container_bottom"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/container_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>